<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="515dp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/listFragment"
            android:layout_width="match_parent"
            android:layout_height="565dp">

            <Button
                android:id="@+id/playButton"
                android:layout_width="111dp"
                android:layout_height="66dp"
                android:layout_marginStart="148dp"
                android:layout_marginTop="248dp"
                android:text="@string/play"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1D666666">

        <TextView
            android:id="@+id/nowPlayingText"
            android:layout_width="108dp"
            android:layout_height="22dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/playing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bookPlayingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nothing"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/nowPlayingText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/nowPlayingText"
            app:layout_constraintTop_toBottomOf="@+id/nowPlayingText" />

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/pause"
            app:layout_constraintBottom_toBottomOf="@+id/bookPlayingText"
            app:layout_constraintEnd_toStartOf="@+id/stopButton"
            app:layout_constraintTop_toTopOf="@+id/nowPlayingText"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/stop"
            app:layout_constraintBottom_toBottomOf="@+id/bookPlayingText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nowPlayingText" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="360dp"
            android:layout_height="32dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@+id/stopButton"
            app:layout_constraintStart_toStartOf="@+id/bookPlayingText"
            app:layout_constraintTop_toBottomOf="@+id/bookPlayingText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>